# mindsave

./: .gitignore  .markdownlint.json  .markdownlintignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SKILL.md  test_v34_comprehensive.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.mindsave/snapshots/: example_snapshot.md
data/antipatterns/: anti_patterns.json
sdk/: README.md
sdk/python/: __init__.py  cli.py  constraint_compressor.py  embedding_client.py  failure_graph.py  indexer.py  migrator.py  mindsave.py  pyproject.toml  query_parser.py  restorer.py  retriever.py  segment.py  vocabulary.json  vocabulary.py
sdk/tools/: mindsave_antipattern.py  mindsave_dashboard.html  mindsave_execution_graph.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: constraint-compressor.ts  failure-graph.ts  index.ts  indexer.ts  integrations.ts  migrator.ts  query-parser.ts  (+4 more)
tests/: MANUAL_TEST_SPEC.md  package.json  test-ts-sdk-structure.mjs  test-ts-sdk.mjs  test_constraint_compressor.py  test_dashboard_html.py  test_failure_graph.py  test_integration_fixes.py  test_integration_v4.py  test_python_sdk.py  test_v34_comprehensive.py  test_v4_embedding_client.py  test_v4_indexer.py  test_v4_migrator.py  test_v4_query_parser.py  test_v4_rerank.py  test_v4_restorer.py  test_v4_retriever.py  test_v4_segment.py  test_v4_vocabulary.py
versions/v2.0/: CLAUDE.md  README.md  SKILL.md  example-session.jsonl
versions/v3.0/: README.md  SKILL.md
