[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindsave"
version = "3.4.0"
authors = [
  { name="MindSave Team" }
]
description = "Hierarchical state management for AI agents — zero-dependency, information density first"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "agent", "state-management", "memory", "persistence", "langchain", "langgraph", "crewai", "autogen"]

[project.urls]
Homepage = "https://github.com/Ringlingo/mindsave"
Repository = "https://github.com/Ringlingo/mindsave"

[tool.setuptools]
packages = ["mindsave"]
package-dir = { "mindsave" = "." }

[tool.setuptools.package-data]
mindsave = ["*.py"]

[project.scripts]
mindsave = "mindsave.mindsave:_main_cli"
